removed async defer again

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src="js/lib/jquery.min.js"></script>
 <script src="js/maps.js"></script>
 <!--removed async defer in order to load basic maps properties without running into errors-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9vxlBwdwNj1QKzf3jv9Abg2gDues9Vvw&callback=initMap&libraries=places,geometry"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9vxlBwdwNj1QKzf3jv9Abg2gDues9Vvw&callback=initMap&libraries=places,geometry"></script>
 
 <div class="results">
     <input type="text" class="results-filter" placeholder="filter results" aria-label="filter results">
