--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
 <!-- holds the map -->
 <div id="map"></div>
 
-
-<!-- callback for the google maps js -->
-<script src="js/lib/jquery.min.js"></script>
-<script src="js/maps.js"></script>
 <!--removed async defer in order to load basic maps properties without running into errors-->
 <a class="results-hide" onclick="sideBar.toggleSidebar()"><i class="fa fa-minus fa-2x" aria-hidden="true"></i></a>
 <div class="results">
@@ -36,13 +32,16 @@
         </ul>
     </div>
     <div class="find-restaurant-btn">
-        <a class="btn btn-default btn-sm" href="#" data-bind="click: populateResults">
+        <a class="btn btn-default btn-sm btn-lg" href="#" data-bind="click: populateResults">
             Find Restaurants</a>
     </div>
-
 </div>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9vxlBwdwNj1QKzf3jv9Abg2gDues9Vvw&callback=initMap&libraries=geometry"></script>
+<script src="js/lib/jquery.min.js"></script>
+<!-- callback for the google maps js -->
+<script src="js/maps.js"></script>
+
+<script defer async src="https://maps.googleasdsadapis.com/maps/api/js?key=AIzaSyA9vxlBwdwNj1QKzf3jv9Abg2gDues9Vvw&callback=initMap&libraries=geometry" onerror="errorMap()"></script>
 
 <script src="js/lib/knockout-3.2.0.js"></script>
 <script src="js/app.js"></script>
