--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 <!-- holds the map -->
+<!--<img src="img/Yelp_burst_positive_RGB.png">-->
 <div id="map"></div>
-
 <!--removed async defer in order to load basic maps properties without running into errors-->
-<a class="results-hide" onclick="sideBar.toggleSidebar()"><i class="fa fa-minus fa-2x" aria-hidden="true"></i></a>
-<div class="results">
+<a style="display: none" class="results-hide" onclick="sideBar.toggleSidebar()"><i class="fa fa-minus fa-2x" aria-hidden="true"></i></a>
+<div class="results" style="display: none">
     <div class="results-list">
         <!-- value is updated as soon as text is entered w/ valueUpdate -->
         <input type="text" data-bind="value: filter, valueUpdate: 'afterkeydown'" class="results-filter"
@@ -41,7 +41,7 @@
 <!-- callback for the google maps js -->
 <script src="js/maps.js"></script>
 
-<script defer async src="https://maps.googleasdsadapis.com/maps/api/js?key=AIzaSyA9vxlBwdwNj1QKzf3jv9Abg2gDues9Vvw&callback=initMap&libraries=geometry" onerror="errorMap()"></script>
+<script id="gMapsAsync" defer async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9vxlBwdwNj1QKzf3jv9Abg2gDues9Vvw&callback=initMap&libraries=geometry" onerror="errorMap()"></script>
 
 <script src="js/lib/knockout-3.2.0.js"></script>
 <script src="js/app.js"></script>
